[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Predator.gd" type="Script" id=1]
[ext_resource path="res://Sprites/BlueEye.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[node name="Predator2" type="Area2D" groups=[
"Predators",
]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
texture = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="LifeTime" type="Timer" parent="."]
wait_time = 20.0
autostart = true
[connection signal="area_entered" from="." to="." method="_on_Predator2_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_PredSpawnTimer_timeout"]
[connection signal="timeout" from="LifeTime" to="." method="_on_LifeTime_timeout"]
